--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -2,12 +2,10 @@ site_name: 'python-app'
 site_description: 'Main documentation for the python-app'
 repo_url: https://github.com/ThanhLam2396/backstage-python-app
 edit_uri: edit/main/docs
-
 plugins:
   - techdocs-core
-
 # For sidebar navigation on https://backstage.io/, see `microsite/sidebars.json`
 nav:
   - Overview:
+    - Getting started: 'index.md'
 
-      - Getting started: 'docs/index.md'
