--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -6,6 +6,7 @@ plugins:
   - techdocs-core
 # For sidebar navigation on https://backstage.io/, see `microsite/sidebars.json`
 nav:
-  - Overview:
-    - Getting started: 'index.md'
+  - Overview: index.md
+    # - Getting started: 'index.md'
+
 
